[package]
authors = [
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Sam Rijs <srijs@airpost.net>",
]
description = "Utilities for retrying operations that can fail."
documentation = "https://docs.rs/retry"
edition = "2018"
homepage = "https://github.com/jimmycuadra/retry"
keywords = ["utility", "utilities"]
license = "MIT"
name = "retry"
readme = "README.md"
repository = "https://github.com/jimmycuadra/retry"
version = "0.5.1"

[dependencies]
rand = "0.6.5"
async-std = { version = "1", optional = true }

[features]
default = []
async = ["async-std"]
