[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>", "Sam Rijs <srijs@airpost.net>"]
description = "Utilities for retrying operations that can fail."
documentation = "https://docs.rs/retry"
edition = "2018"
homepage = "https://github.com/jimmycuadra/retry"
keywords = ["utility", "utilities"]
license = "MIT"
name = "retry"
readme = "README.md"
repository = "https://github.com/jimmycuadra/retry"
version = "2.0.0"

[dependencies]
rand = { version = "^0.8", optional = true }

[features]
default = ["random"]
random = ["rand"]
